initial smart player